--- a/templates/simple.html
+++ b/templates/simple.html
@@ -53,6 +53,7 @@
         <table>
           <thead>
             <tr>
+              <th>Gambar</th>
               <th>Waktu</th>
               <th>Status</th>
               <th>Delay (ms)</th>
