--- a/templates/login.html
+++ b/templates/login.html
@@ -280,7 +280,7 @@
                     <label for="password">Password</label>
                     <div class="password-container">
                         <input type="password" id="password" name="password" placeholder="Masukkan password" required>
-                        <span class="toggle-password" onclick="togglePassword()">👁️</span>
+                        <span class="toggle-password" onclick="togglePassword()"></span>
                     </div>
                 </div>
 
